v36 2019-04-01

	* Status reporting of passed expectation calls as sucessful assertions in
	  DOCTEST and Catch2. Thanks to:

	    Tore Martin Hagen <tore@instanes.name> for Catch2
	    Cristian Morales Vega <cristian@samknows.com> for DOCTEST

	  You get the support via the provided headers

	    #include <catch2/trompeloeil.hpp>
	    #include <doctest/trompeloeil.hpp>

	  See the CookBook for information about adding such hooks for other unit
	  testing frame works.

	* Fixed issue 172 where THROW() would not compile if the function returns
	  a type that is not default constructible.

	* Partially fixed issue 173, where an object constructible from nullptr
	  but not comparable with nullptr, would be constructed when printed
	  (for example when an expectation failed.)

	  Unfortunately this fix does not work for gcc versions 4.x or MSVC 14.

v35 2019-04-01

	* Improvements to documentation. Thanks to:

	    Robert Dailey <rcdailey@gmail.com>
	    Yuri Timenkov <yuri@timenkov.ru>
	    Viatorus <lutztonineubert@gmail.com>

	* Improved DocTest integration. Thanks to:

	    Cristian Morales Vega <cristian@samknows.com>

	* CMakeLists.txt honours CMAKE_INSTALL_LIBDIR. Thanks to:

	    Cristian Morales Vega <cristian@samknows.com>

	* Partially fixed issue 155, where an unfulfilled expectation, when
	  built with the default throwing reporter, terminated without a
	  message when compiled with gcc and optimization. With the partial
	  fix the program still terminates, but with the correct violation
	  message displayed.

	* Fixed issue 157 where it was impossible to place an expectation on a
	  reference to a non-copyable type. This fix also resolved a number of
	  problems with older compilers. See docs/Backward.md for details.

	* Fixed clang-tidy warning, misc-non-private-member-variables-in-classes
	  that leaks into application code from the Trompeloeil header.

v34 2019-04-01

	* Rearranged include directory structure to make it easier to use, and