@@ -1,3 +1,9 @@
+	* Fix TROMPELOEIL_CONCAT macro issue to restore compiling with MSVC
+	  when traditional preprocessor is enabled.
+
+	* Fix issue 173 for GCC 4.x by performing testing to confirm
+	  correctness of existing code.
+
 v36 2019-04-01
 
 	* Status reporting of passed expectation calls as sucessful assertions in
